--- a/src/components/Collection.css
+++ b/src/components/Collection.css
@@ -22,6 +22,7 @@
 }
 
 .collection-title, .collection-subtitle {
+    position: absolute;
     right: auto !important;
     left: 0;
     width: 100%;
@@ -38,21 +39,27 @@
 }
 
 .collection-learned-count {
+    position: absolute;
     top: 0.15em;
+    right: 0.2em;
     width: 2em;
     text-align: center;
 }
 
 .collection-count {
+    position: absolute;
     bottom: 0.15em;
+    right: 0.2em;
     width: 2em;
     text-align: center;
+    position: absolute;
 }
 
 .collection-count-frac {
     display: block;
     position: absolute;
     bottom: 50%;
+    right: 0.2em;
     content: " ";
     width: 2em;
     border-top: 1px solid #646464;
@@ -71,7 +78,8 @@
     transition: all 0.2s ease-in-out;
 }
 
-#collection-body button span {
+#collection-body button > span {
+    position: absolute;
 }
 
 #collection-body button .collection-item-title, #collection-body button .collection-item-subtitle {
@@ -99,6 +107,7 @@
 }
 
 #collection-body button .collection-item-progress {
+    position: absolute;
     display: block;
     height: 0.5em;
     bottom: 0;
@@ -110,6 +119,7 @@
 
 #collection-body button .collection-item-progress-inner {
     display: block;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
@@ -146,7 +156,7 @@
     display: block;
 }
 
-#collection-body button .action-button-lock {
+#collection-body button .action-button-annotations {
     top: 0;
     right: 0;
     transform: translateX(30%) translateY(-30%);
